Fix overlapping layout and responsive issues

--- a/sec5.css
+++ b/sec5.css
@@ -91,22 +91,22 @@
   }
 }
 @media (max-width: 873px) {
-  .sec-6 {
-    height: 100%;
-    padding: 20px;
+  sec-6-2{
+
   }
   sec-6-1 {
-    top:0px;
+    top:10px;
     padding: 20px;
   }
   span{
-    font-size: 15px;
+    font-size: 10px;
     top:0px;
   }
   .box3 {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
+    margin: top 20px;
   }
   .box3 img {
     width: 100%;
